salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/Risk_Rollup_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configurable weights for the multi-tier cascading risk SCORE formula (docs/multi-tier-risk-rollup.md): New Score = (Own Score x Own_Score_Weight__c) + (avg of weighted sub-supplier contributions x Sub_Supplier_Weight__c), where each sub-supplier&apos;s contribution is its own score x its Relationship_Type_To_Parent__c weight. One &quot;Default&quot; record is read by MultiTierRollupService; add more records only if per-domain/per-tier overrides are ever needed.</description>
    <label>Risk Rollup Setting</label>
    <pluralLabel>Risk Rollup Settings</pluralLabel>
</CustomObject>