salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Cascading_Risk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Cascading_Risk_Threshold__c</fullName>
    <description>New Score (0-100) at or above which Account.Cascading_Risk_Flag__c is set true, provided propagation (not the supplier&apos;s own score alone) is what crossed it. Default 70.</description>
    <label>Cascading Risk Threshold</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>