salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Own_Score_Weight__c.field-meta.xml
<CustomField>
    <fullName>Own_Score_Weight__c</fullName>
    <description>Weight applied to a supplier&apos;s own compliance score in the New Score formula. Default 0.7 (70%).</description>
    <label>Own Score Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>