salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Preferred_Weight__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Weight__c</fullName>
    <description>Relationship-weight multiplier applied to a sub-supplier&apos;s score when Account.Relationship_Type_To_Parent__c = &apos;Preferred&apos; (primary supplier, alternatives exist). Default 1.0 — also the fallback weight when Relationship_Type_To_Parent__c is blank.</description>
    <label>Preferred Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>