salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Secondary_Weight__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Weight__c</fullName>
    <description>Relationship-weight multiplier applied to a sub-supplier&apos;s score when Account.Relationship_Type_To_Parent__c = &apos;Secondary&apos; (backup available, reduced exposure). Default 0.8.</description>
    <label>Secondary Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>