salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Sole_Source_Weight__c.field-meta.xml
<CustomField>
    <fullName>Sole_Source_Weight__c</fullName>
    <description>Relationship-weight multiplier applied to a sub-supplier&apos;s score when Account.Relationship_Type_To_Parent__c = &apos;Sole Source&apos; (only supplier for this item, no fallback). Default 1.5.</description>
    <label>Sole Source Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>