salesforce/force-app/main/default/objects/Risk_Rollup_Setting__mdt/fields/Sub_Supplier_Weight__c.field-meta.xml
<CustomField>
    <fullName>Sub_Supplier_Weight__c</fullName>
    <description>Weight applied to the blended (averaged, relationship-weighted) sub-supplier contribution in the New Score formula. Default 0.3 (30%).</description>
    <label>Sub-Supplier Weight</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>